# word-by-word

./: .gitignore  README.md  db.ps1  deploy.php  getuserid.php  htmlredirect.php  index.php  navbar.php  pyproject.toml  run.ps1  run.zsh  signin.php  stories.php  storiesList.php  word_by_word.sql
word_by_word/: EXAMPLE_CONFIG.py  __init__.py
word_by_word/routes/: index.py
word_by_word/templates/: index.html
